# pymcu-sdk

./: .gitignore  LICENSE  PyMCU.SDK.slnx  README.md  pyproject.toml
.github/workflows/: build-csharp.yml  build-python.yml
src/csharp/: PyMCU.Backend.SDK.csproj
src/csharp/Backend/: CodeGen.cs  IBackendProvider.cs
src/csharp/Backend/Analysis/: DynamicStackAllocator.cs  StackAllocator.cs
src/csharp/Backend/License/: LicenseResult.cs  LicenseValidator.cs
src/csharp/Backend/Serialization/: IrSerializer.cs
src/csharp/Common/Models/: DeviceConfig.cs
src/csharp/IR/: DataType.cs  Tacky.cs
src/python/pymcu/backend/sdk/: __init__.py  plugin.py
src/python/pymcu/toolchain/sdk/: __init__.py  base_tool.py  plugin.py  programmer.py  pypi_tool.py  toolchain.py
tests/csharp/: PyMCU.Backend.SDK.Tests.csproj
tests/csharp/Backend/Analysis/: DynamicStackAllocatorTests.cs  StackAllocatorTests.cs
tests/csharp/Backend/License/: LicenseResultTests.cs  LicenseValidatorTests.cs
tests/csharp/Backend/Serialization/: IrSerializerTests.cs
tests/csharp/IR/: DataTypeTests.cs  TackyTests.cs
tests/python/: conftest.py  test_backend_plugin.py  test_base_tool.py  test_pypi_tool.py  test_toolchain_plugin.py
