[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "pymcu-plugin-sdk"
version = "0.1.0a1"
description = "Shared base classes and plugin protocol for PyMCU backend and toolchain packages"
readme = "README.md"
authors = [
    { name = "Ivan Montiel Cardona", email = "developer@begeistert.dev" }
]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "rich>=13.0.0",
    "filelock>=3.13.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/python/pymcu"]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

